feat: add SEO metadata, PWA manifest, and brand assets
- Add comprehensive meta tags and Open Graph data to index.html
- Add PWA manifest.json with app configuration
- Add logo and og-image for branding
- Update Navbar and About page metadata references
- Remove unused vite.svg

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>orion</title>
+
+    <!-- Title & Description -->
+    <title>Orion — AI-Powered Customer Support Platform</title>
+    <meta
+      name="description"
+      content="Orion is an intelligent customer support platform that automates FAQs, tracks sessions, and escalates smartly using LLMs. Built for modern teams."
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://orion.atharvsingh.me/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://orion.atharvsingh.me/" />
+    <meta property="og:title" content="Orion — AI-Powered Customer Support Platform" />
+    <meta
+      property="og:description"
+      content="An elegant, minimal platform that uses AI to handle customer queries and escalation intelligently."
+    />
+    <meta property="og:image" content="https://orion.atharvsingh.me/og-image.png" />
+
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://orion.atharvsingh.me/" />
+    <meta name="twitter:title" content="Orion — AI-Powered Customer Support Platform" />
+    <meta
+      name="twitter:description"
+      content="An elegant, minimal platform that uses AI to handle customer queries and escalation intelligently."
+    />
+    <meta name="twitter:image" content="https://orion.atharvsingh.me/og-image.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0a0a0a" />
+
+    <!-- Apple / PWA Support -->
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="apple-mobile-web-app-title" content="Orion" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Atharv Singh" />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Manifest for PWA -->
+    <link rel="manifest" href="/manifest.json" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx" defer></script>
   </body>
 </html>
